--- a/photos.css
+++ b/photos.css
@@ -88,3 +88,15 @@ button{
     margin-left: 48%;
 }
 
+.choco, .fraise, .citron, .cookies{
+    display:flex;
+    align-items:center;
+    gap:20px;
+    flex-direction: row;
+}
+
+.choco img, .fraise img, .citron img, .cookies img{
+    max-width: 150px;
+    height: auto
+}
+
